<resources>
    <string name="app_name">HashPass</string>
    <string name="word_1">Word 1</string>
    <string name="word_2">Word 2</string>
    <string name="word_3">Word 3</string>
    <string name="word_6">Word 6</string>
    <string name="word_5">Word 5</string>
    <string name="word_4">Word 4</string>
    <string name="enter_your_phrase">Enter your phrase</string>
    <string name="done">Done</string>
    <string name="options">Options</string>
    <string name="open_drawer">open drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="name_label">Name/Label</string>
    <string name="username">Username</string>
    <string name="generate_password">Generate Password</string>
    <string name="generate">GENERATE</string>
    <string name="notes">Notes</string>
    <string name="length">Length</string>
    <string name="_30_64">30 / 64</string>
    <string name="password">Password</string>
    <string name="show">Show</string>
    <string name="hide">HIDE</string>
    <string name="delete_msg">Are you sure you would like to delete?</string>
    <string name="delete_title">Delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remember_message">You must remember this phrase in order to be able to construct your password.</string>
    <string name="remember_phrase_title">Remember your phrase</string>
    <string name="ok">OK</string>
    <string name="new_phrase">New Phrase</string>
    <string name="import_str">Import</string>
    <string name="export">Export</string>
    <string name="import_export">Import/Export</string>
    <string name="working">Working...</string>
    <string name="about">About</string>
    <string name="backup_restore">Backup/Restore</string>
    <string name="welcome">Welcome</string>
    <string name="continue_btn">Continue</string>
    <string name="exit_btn">Exit</string>
    <string name="onboard_desc_1">This introduction will take you through the steps needed to set up HashPass</string>
    <string name="onboard_title_2">Set Your Memorable Phrase</string>
    <string name="onboard_desc_2">When you press continue, you will be asked to enter a memorable phrase. This phrase must consist of 6 words. You will be asked to enter this phrase whenever you wish to view or generate a password, because this phrase is combined with a secret stored by the app to construct the password. \n\n\n<b>YOU MUST REMEMBER THE PHRASE!</b> \n\n\nIf you forget the phrase, you can no longer construct your passwords, so please make sure you remember all 6 words.</string>
    <string name="onboard_desc_3">HashPass Secure Input is like a keyboard, that\'s just for entering your username and password. This means that you don\'t need to use insecure copy and paste. Pressing Enable will take you to system settings, so that you can enable HashPass Secure Input as an input method.</string>
    <string name="onboard_title_3">Enable Secure Input</string>
    <string name="onboard_desc_4">That\'s all, you\'re ready to start using the app. If you have used the app before, and have exported passwords, you can import them using the import function, available from the main screen.</string>
    <string name="onboard_title_4">Finish</string>
    <string name="credits">Credits</string>
    <string name="secure_input_bubble_title">Secure Input</string>
    <string name="secure_input_bubble_desc">Activate Secure Input to securely enter your username and password without the need for copy and paste</string>
    <string name="length_bubble_title">Length</string>
    <string name="length_bubble_desc">Select the length of your generated password</string>
    <string name="chars_bubble_title">Allowed Characters</string>
    <string name="chars_bubble_desc">Removing characters will prevent those characters from appearing in a generated password.</string>
    <string name="gen_bubble_title">Generate</string>
    <string name="gen_bubble_desc">Press to generate the password</string>
    <string name="done_bubble_title">Done</string>
    <string name="done_bubble_desc">Once satisfied with the generated password, press to return to the add password screen</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="general">General</string>
    <string name="settings">Settings</string>
    <string name="version">Version 1.1 © John Kressel 2020</string>
</resources>
