<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboarding">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarOnboarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbarOnboarding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:textSize="30sp"
        android:id="@+id/onboardingTitle"
        android:text="@string/welcome"
        android:layout_margin="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/onboardingTitle"
        android:layout_margin="30dp"
        android:id="@+id/onboardingDesc"
        android:text="@string/onboard_desc_1"
        app:layout_constraintBottom_toTopOf="@+id/OnBtnContinue"
        app:layout_constraintVertical_bias="0"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/continue_btn"
        android:id="@+id/OnBtnContinue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/OnBtnNegative"
        style="?android:colorButtonNormal"
        android:textColor="#ffffff"
        android:layout_margin="10dp"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exit_btn"
        android:id="@+id/OnBtnNegative"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/OnBtnContinue"
        style="?android:colorButtonNormal"
        android:textColor="#ffffff"
        android:layout_margin="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>