<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNew">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAddNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"/>




    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pwName"
        android:hint="@string/name_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"
        android:singleLine="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pwUser"
        android:hint="@string/username"
        app:layout_constraintTop_toBottomOf="@+id/pwName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"
        android:singleLine="true"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pw"
        android:hint="@string/password"
        android:layout_margin="20dp"
        android:singleLine="true"
        android:layout_weight="1"
        android:editable="false"
        app:layout_constraintTop_toBottomOf="@id/pwUser"
        />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/pwCopy"
            style="?android:colorButtonNormal"
            android:textColor="#ffffff"
            android:src="@drawable/ic_content_copy_black_24dp"
            android:background="@android:color/transparent"
            app:layout_constraintRight_toRightOf="@+id/pw"
            app:layout_constraintBottom_toBottomOf="@+id/pw"
            app:layout_constraintTop_toTopOf="@+id/pw"
            android:layout_marginBottom="5dp"

            />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate"
        android:layout_margin="20dp"
        android:id="@+id/genBtn"
        style="?android:colorButtonNormal"
        android:textColor="#ffffff"
        app:cornerRadius="30dp"
        app:layout_constraintTop_toBottomOf="@+id/pw"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:hint="@string/notes"
        android:id="@+id/pwNotes"
        app:layout_constraintTop_toBottomOf="@+id/genBtn"
        android:layout_margin="20dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_check_white_24dp"
        android:contentDescription="Add Password"
        android:layout_margin="20dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>