<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImportExport">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarImportExport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:id="@+id/backupPW"
        app:layout_constraintTop_toBottomOf="@+id/toolbarImportExport"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:hint="@string/password"/>


    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/import_str"
        android:layout_margin="20dp"
        android:id="@+id/importBtn"
        style="?android:colorButtonNormal"
        android:textColor="#ffffff"
        app:cornerRadius="30dp"
        app:layout_constraintTop_toBottomOf="@id/backupPW"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/exportBtn"
        />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/export"
        android:layout_margin="20dp"
        android:id="@+id/exportBtn"
        style="?android:colorButtonNormal"
        android:textColor="#ffffff"
        app:cornerRadius="30dp"
        app:layout_constraintTop_toBottomOf="@id/backupPW"
        app:layout_constraintStart_toEndOf="@id/importBtn"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/exportBtn"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/working"
            android:layout_weight="1"
            android:layout_margin="50dp"
            android:textSize="30sp"
            android:id="@+id/workingTV"
            android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/indeterminateBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:layout_marginEnd="50dp"
        android:visibility="gone"
        />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>