<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterPhrase">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarEnterPhrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/colorPrimary"
        android:outlineAmbientShadowColor="@color/cardview_shadow_start_color">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_phrase"
        android:textSize="30sp"
        android:padding="10dp"
        android:textColor="#ffffff"/>
    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.34"
        android:id="@+id/top_left_guide"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66"
        android:id="@+id/top_right_guide"/>


    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/word1"
        android:hint="@string/word_1"
        android:textAlignment="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/top_left_guide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintVertical_bias="0.3"
        android:singleLine="true"
        android:imeOptions="actionNext"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/word2"
        android:hint="@string/word_2"
        android:textAlignment="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/top_left_guide"
        app:layout_constraintRight_toLeftOf="@id/top_right_guide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.3"
        android:singleLine="true"
        android:imeOptions="actionNext"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/word3"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="20dp"
        android:hint="@string/word_3"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/top_right_guide"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintVertical_bias="0.3"
        android:singleLine="true"
        android:imeOptions="actionNext"
        />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.34"
        android:id="@+id/bottom_left_guide"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66"
        android:id="@+id/bottom_right_guide"/>


    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/word4"
        android:hint="@string/word_4"
        android:textAlignment="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/bottom_left_guide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintVertical_bias="0.45"
        android:singleLine="true"
        android:imeOptions="actionNext"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/word5"
        android:hint="@string/word_5"
        android:textAlignment="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/bottom_left_guide"
        app:layout_constraintRight_toLeftOf="@id/bottom_right_guide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.45"
        android:singleLine="true"
        android:imeOptions="actionNext"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/word6"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="20dp"
        android:hint="@string/word_6"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/bottom_right_guide"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintVertical_bias="0.45"
        android:singleLine="true"
        android:imeOptions="actionDone"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/done"
        android:layout_margin="16dp"
        android:src="@drawable/ic_check_white_24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>