<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewAndEditPassword">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:cardCornerRadius="10dp"
        android:id="@+id/cardName"
        app:cardBackgroundColor="@color/colorPrimary"
        android:outlineAmbientShadowColor="@color/cardview_shadow_start_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            android:id="@+id/pwNameView"
            android:textSize="30sp"
            android:padding="10dp"
            android:textColor="#ffffff"/>
    </androidx.cardview.widget.CardView>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pwUserView"
        android:hint="@string/username"
        app:layout_constraintTop_toBottomOf="@+id/cardName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:paddingEnd="40dp"
        android:singleLine="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:id="@+id/viewBtnCopyUser"
        style="?android:colorButtonNormal"
        android:textColor="#ffffff"
        android:src="@drawable/ic_content_copy_black_24dp"
        android:background="@android:color/transparent"
        app:layout_constraintRight_toRightOf="@+id/pwUserView"
        app:layout_constraintBottom_toBottomOf="@+id/pwUserView"
        app:layout_constraintTop_toTopOf="@+id/pwUserView"
        android:layout_marginBottom="5dp"

        />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pwView"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@+id/pwUserView"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:singleLine="true"
            android:paddingEnd="40dp"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/viewBtnCopyPwd"
            style="?android:colorButtonNormal"
            android:textColor="#ffffff"
            android:src="@drawable/ic_content_copy_black_24dp"
            android:background="@android:color/transparent"
            app:layout_constraintRight_toRightOf="@+id/pwView"
            app:layout_constraintBottom_toBottomOf="@+id/pwView"
            app:layout_constraintTop_toTopOf="@+id/pwView"
            android:layout_marginBottom="5dp"

            />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:hint="@string/notes"
        app:layout_constraintTop_toBottomOf="@+id/pwView"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/pwNotesView"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabKeyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_keyboard_black_24dp"
        android:contentDescription="Select Input"
        android:layout_margin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>