<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GeneratePassword">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarGenerate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/length"
        android:id="@+id/labelLength"
        app:layout_constraintBottom_toTopOf="@+id/seekLength"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toLeftOf="@+id/seekLength"
        android:layout_marginBottom="5dp"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/seekLength"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:progress="30"
        android:max="64" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_30_64"
        android:id="@+id/labelCurrentValue"
        app:layout_constraintTop_toBottomOf="@+id/seekLength"
        android:layout_marginEnd="20dp"
        app:layout_constraintRight_toRightOf="@+id/seekLength"
        android:layout_marginBottom="5dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/labelCurrentValue">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/allowedCharacters"
        android:layout_margin="20dp"
        android:allowUndo="true"
        android:hint="Allowed Characters"
        android:digits="0123456789:;&lt;=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\]^_`!#$%&amp;&apos;()*+,-./abcdefghijklmnopqrstuvwxyz{|}~"
        android:text="0123456789:;&lt;=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\]^_`!#$%&amp;&apos;()*+,-./abcdefghijklmnopqrstuvwxyz{|}~" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/generatePwd"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="30dp"
        android:textColor="#ffffff"
        style="?android:colorButtonNormal"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/generatePwd"
        android:layout_marginTop="40dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/genOutput"
            android:layout_margin="20dp"
            android:allowUndo="true"
            android:hint="Password"
            android:editable="false"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabGen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_check_white_24dp"
        android:contentDescription="Accept"
        android:layout_margin="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>